Make close icon show up for left tabs on IE6 again. Strangely, the hack that was added to make this work before seems to be no longer needed (and actually prevents it from working). Fixes #6999.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@14071 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/layout/TabContainer.css
+++ b/themes/tundra/layout/TabContainer.css
@@ -123,14 +123,6 @@
 	padding:6px 10px 4px 20px;
 }
 
-/* correct for IE6.
-    We cant force hasLayout as that blows out the shrink wrapped tabs
-    ..so we shim in the closeImage position properties instead
-*/
-.dj_ie6 .tundra .dijitTabContainerLeft-tabs .dijitTab .dijitClosable .closeImage {
-	left:-20px;
-}
-
 .tundra .dijitTabContainerBottom-tabs .dijitTab .dijitClosable .closeImage {
 	top: auto;
 	bottom: 4px;
